# ai-divination-skills

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  glama.json  pyproject.toml  server.json  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  lychee.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  new_skill.yml  safety_concern.yml
.github/workflows/: codeql.yml  docker.yml  link-check.yml  mcp-registry.yml  release.yml  tests.yml
ai_divination_skills/: __init__.py  bazi.py  cli.py  iching.py  mcp_server.py  tarot.py  xiaoliuren.py
ai_divination_skills/templates/: __init__.py  bazi.md  iching.md  shared.md  tarot.md  xiaoliuren.md
docs/: app.js  index.html  styles.css
docs/clients/: claude-desktop.md  codex.md  continue.md  cursor.md
docs/maintainer/: release-and-pypi.md  social-preview.md
examples/: iching-strategy.md  tarot-decision.md  xiaoliuren-daily.md
schemas/: iching-cast.schema.json  tarot-draw.schema.json  xiaoliuren-cast.schema.json
shared/: interpretation-style.md  methodology.md  randomness-protocol.md  response-contract.md  safety-policy.md
skills/bazi/: SKILL.md
skills/bazi/agents/: claude.yaml  cursor.mdc  gemini.yaml  openai.yaml
skills/bazi/references/: pillars.md  sources.md
skills/bazi/scripts/: cast.py
skills/iching/: SKILL.md
skills/iching/agents/: claude.yaml  cursor.mdc  gemini.yaml  openai.yaml
skills/iching/references/: casting-methods.md  hexagrams.md  sources.md
skills/tarot/: SKILL.md
skills/xiaoliuren/: SKILL.md
tests/: test_agent_adapters.py  test_bazi.py  test_cli.py  test_docs_site.py  test_interpretation_templates.py  test_mcp_server.py  test_methodology_docs.py  test_packaged_install.py  test_schemas.py  test_scripts.py  test_skill_contract.py
(+17 files in other folders)
