[project]
name = "ai-divination-skills"
version = "0.6.0"
description = "Direct, practical divination skills for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
lunar = [
  "lunar-python>=1.4.4"
]
dev = [
  "build",
  "twine",
  "PyYAML>=6"
]

[project.scripts]
ai-divination = "ai_divination_skills.cli:main"
ai-divination-mcp = "ai_divination_skills.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_divination_skills*"]

[tool.setuptools.package-data]
ai_divination_skills = ["templates/*.md"]
